Initial code to add zip and api key for making calls to the endpoints in this project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,10 @@ services:
       - MQTT_PASSWORD=${MQTT_PASSWORD}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - TLS_CERT_HOSTNAME=${TLS_CERT_HOSTNAME}
+      - DEPLOYMENT_STORAGE_PATH=/data/deployments
     volumes:
       - ./data/keys/ca.pem:/app/certs/ca.pem:ro
+      - ./data/deployments:/data/deployments
     restart: unless-stopped
     depends_on:
       - mosquitto
