--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,6 +20,9 @@ http {
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
 
+        # Allow large deployment package uploads (2GB)
+        client_max_body_size 2g;
+
         root /usr/share/nginx/html;
         index index.html;
 
@@ -41,6 +44,30 @@ http {
         # Manifest
         location /manifest.json {
             add_header Cache-Control "no-cache";
+        }
+
+        # Deployment upload - extended timeouts for large files
+        location /api/deployments/upload {
+            proxy_pass http://backend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_read_timeout 3600;
+            proxy_send_timeout 3600;
+            proxy_request_buffering off;
+        }
+
+        # Deployment download - extended timeouts for large files
+        location /api/deployment-download/ {
+            proxy_pass http://backend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_read_timeout 3600;
+            proxy_send_timeout 3600;
+            proxy_buffering off;
         }
 
         # API proxy to backend
