Moved to letsencrypt for private cloud ssl and gen certs for local dev

--- a/.env.example
+++ b/.env.example
@@ -25,18 +25,22 @@ API_PORT=3000
 FRONTEND_PORT=8443
 
 # ============================================================================
-# Database Configuration
-# ============================================================================
-DB_PATH=/app/data/rv.db
-
-# ============================================================================
 # Network Configuration & SSL Certificates
 # ============================================================================
 TLS_CERT_HOSTNAME=your_device_hostname.local
 # ^ For DEVELOPMENT: Any value works (dev certs always include localhost)
-# ^ For PRODUCTION: Set to your device's hostname (e.g., trailcurrent01.local)
-# ^ Used by ./scripts/generate-certs.sh for SSL certificate generation
-# ^ See README.md "SSL Certificate Generation" section for details
+# ^ For PRODUCTION: Set to your public domain (e.g., cloud.example.com)
+# ^ Used by ./scripts/generate-certs.sh and ./scripts/setup-letsencrypt.sh
+FRONTEND_HTTP_PORT=80
+# ^ Port for HTTP (ACME challenge + redirect to HTTPS)
+
+# ============================================================================
+# Let's Encrypt (production only — ignore for local development)
+# ============================================================================
+LETSENCRYPT_EMAIL=
+# ^ Required for Let's Encrypt certificate registration and renewal notices
+# ^ Used by ./scripts/setup-letsencrypt.sh
+# ^ For local development, leave blank and use ./scripts/generate-certs.sh instead
 
 # ============================================================================
 # Tileserver Map Tiles
