--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,7 @@ FROM nginx:alpine
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY public /usr/share/nginx/html
 
+EXPOSE 80
 EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
