--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,6 +13,20 @@ http {
 
     server_tokens off;
 
+    # HTTP — Let's Encrypt ACME challenge + redirect to HTTPS
+    server {
+        listen 80;
+        server_name _;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
     server {
         listen 443 ssl;
         server_name _;  # Match any hostname; TLS cert is self-signed
