Updating tileserver  to use the naming convention more generic

--- a/.env.example
+++ b/.env.example
@@ -46,7 +46,7 @@ LETSENCRYPT_EMAIL=
 # Tileserver Map Tiles
 # ============================================================================
 # The Tileserver container requires a .mbtiles file for map data
-# Location: data/tileserver/north-america.mbtiles
+# Location: data/tileserver/map.mbtiles
 #
 # See DOCS/GeneratingMapTiles.md and tileserver/generate-tiles.sh
 # for instructions on generating tiles from OpenStreetMap data
