Fixing issues that caused caching issues on IOS also icon fixes added

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -49,6 +49,11 @@ http {
             access_log off;
         }
 
+        # Apple touch icon - must revalidate (no content hash in filename)
+        location = /apple-touch-icon.png {
+            add_header Cache-Control "no-cache";
+        }
+
         # Static files caching (exclude /tiles/ and /api/ paths)
         location ~* ^(?!/tiles/)(?!/api/).*\.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
